# delta

./: .gitignore  .mailmap  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
delta/: Cargo.toml
delta/src/: algorithms.rs  data.rs  error.rs  errors.rs  lib.rs  losses.rs  optimizers.rs  preprocessors.rs  scalers.rs  tui.rs
delta/src/classical/: algorithms.rs  losses.rs  mod.rs  normalization.rs  scalers.rs
delta/src/classical_ml/: algorithms.rs
delta/src/data/: csv.rs  error.rs  json.rs  mod.rs  processors.rs
delta/src/deep_learning/: conv2d_layer.rs  layers.rs  mod.rs  tensor_ops.rs
delta/src/devices/: mod.rs
delta_examples/classical/k_nearest_neighbor/: Cargo.toml
delta_examples/classical/k_nearest_neighbor/src/: main.rs
delta_examples/classical/linear_regression/: Cargo.toml  test_data.csv  train_data.csv
delta_examples/classical/linear_regression/src/: main.rs
delta_examples/classical/logistic_regression/: Cargo.toml  test_data.csv
delta_examples/classical/logistic_regression/src/: main.rs
delta_examples/classical/random_forest/: Cargo.toml
delta_examples/classical/random_forest/src/: main.rs
delta_examples/classical/support_vector_machines/: Cargo.toml
delta_examples/classical/support_vector_machines/src/: main.rs
delta_examples/classical_ml/random_forest/: Cargo.toml
delta_examples/classical_ml/support_vector_machines/: Cargo.toml
delta_examples/knn/: Cargo.toml  test_data.csv  train_data.csv
delta_examples/knn/src/: main.rs
delta_examples/linear_regression/: Cargo.toml
delta_examples/linear_regression/src/: main.rs
delta_examples/logistic_regression/: Cargo.toml  train_data.csv
delta_examples/logistic_regression/src/: main.rs
examples/classical_ml/k_nearest_neighbor/: Cargo.toml
examples/classical_ml/k_nearest_neighbor/src/: main.rs
examples/classical_ml/random_forest/src/: main.rs
examples/classical_ml/support_vector_machines/src/: main.rs
examples/deep_learning/mnist/src/: main.rs
