[workspace]
members = [
    "delta",
    "delta_examples/linear_regression",
    "delta_examples/logistic_regression",
    "delta_examples/knn",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.32.0", features = ["full"] }

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
