[package]
name = "deltaml"
version = "0.1.0"
edition = "2021"
authors = [
    "Marcus Cvjeticanin <mjovanc@icloud.com>",
    "Chase Willden <chase.willden@gmail.com>",
]
description = "An Open-Source Machine Learning Framework in Rust Δ"
license = "BSD-3-Clause"
documentation = "https://docs.rs/deltaml/latest/deltaml/"
repository = "https://github.com/blackportal-ai/delta"
readme = "../README.md"
rust-version = "1.86.0"
homepage = "https://blackportal.ai"
keywords = ["machine-learning", "ml", "framework"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.8.5"
ndarray = "0.16.1"
libm = "0.2.11"

[dependencies.num-traits]
version = "0.2"
optional = true

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.30.0", optional = true }

[dev-dependencies]
flamegraph = "0.6.6"
linfa-datasets = { version = "0.x", features = ["iris"] }

[features]
default = ["classical"]
classical = ["num-traits"]
metal = ["dep:metal"]
