[package]
name = "deltaml"
version = "0.1.0"
edition = "2021"
authors = [
    "Marcus Cvjeticanin <mjovanc@icloud.com>",
    "Chase Willden <chase.willden@gmail.com>",
]
description = "An Open-Source Machine Learning Framework in Rust Δ"
license = "BSD-3-Clause"
documentation = "https://docs.rs/deltaml/latest/deltaml/"
repository = "https://github.com/blackportal-ai/delta"
readme = "../README.md"
rust-version = "1.86.0"
homepage = "https://blackportal.ai"
keywords = ["machine-learning", "ml", "framework"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ndarray = "0.16.1"
csv = "1.1"
thiserror = "2.0.12"
num-traits = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.30.0", optional = true }

[dev-dependencies]
flamegraph = "0.6.6"
linfa-datasets = { version = "0.x", features = ["iris"] }
tempfile = "3.10"
env_logger = "0.11"
